--- a/bio_en.html
+++ b/bio_en.html
@@ -1,6 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+<head>
+  <meta charset="UTF-8">
+  <title>nikosyfantis.com</title>
+
+  <!-- Google tag -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XNLJPFWLPW"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XNLJPFWLPW');
+  </script>
+
+  <!-- υπόλοιπα css ή meta tags σου -->
+</head>
+
+
+
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nikos Yfantis</title>
