--- a/bio.html
+++ b/bio.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 
 <head>
+<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <title>nikosyfantis.com</title>
 
@@ -27,7 +29,7 @@
 
       body {
         margin: 0;
-        font-family: Arial, sans-serif;
+        font-family: 'Lato', sans-serif;
         background-color: #f2f2f2;
         color: #222;
         padding: 20px;
@@ -173,7 +175,7 @@ document.addEventListener('copy', e => e.preventDefault());
 document.addEventListener('cut', e => e.preventDefault());
 </script>
 
-<footer style="background-color: #1a1a1a; color: white; text-align: center; padding: 10px 0; font-family: Arial, sans-serif; font-size: 14px;">
+<footer style="background-color: #1a1a1a; color: white; text-align: center; padding: 10px 0; font-family: 'Lato', sans-serif; font-size: 14px;">
   © 2025 Nikos Yfantis. All rights reserved.
 </footer>
 
