--- a/bio_en.html
+++ b/bio_en.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 
 <head>
   <meta charset="UTF-8">
@@ -27,7 +28,7 @@
     <style>
       body {
         margin: 0;
-        font-family: Arial, sans-serif;
+        font-family: 'Lato', sans-serif;
         background-color: #f2f2f2;
         color: #222;
         padding: 20px;
